[build-system]
requires = ["setuptools>=75.3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nagooglesearch"
version = "8.0"
authors = [{ name = "Ivan Sincek" }]
description = "Not another Google searching tool."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent"
]
dependencies = ["bot_safe_agents>=1.0", "requests>=2.31.0", "bs4>=0.0.1", "beautifulsoup4>=4.12.3"]

[project.urls]
"Homepage" = "https://github.com/ivan-sincek/nagooglesearch"

[tool.setuptools.packages.find]
where = ["src"]
